templating works, separated db population to child template

--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     <main>
     <!-- [0] = title, [1] = href, [2] = date  [3] = favicons -->
         <ul class="flow-3" id="content">
+        {% include 'content.html' %}
         {% block content %}
 
         {% endblock %}
