ladies and gentlemen, we have pagination.

--- a/style.css
+++ b/style.css
@@ -112,3 +112,9 @@ li {
 .flow-5>*+* {
     margin-top: var(--s-5);
 }
+
+#no-wrap {
+    white-space: nowrap;
+    display: inline-block;
+    overflow: hidden;
+}
