--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
         <p>Search with <a href="https://lieu.cblgh.org/">Lieu</a>.</p>
     </header>
     <main>
-        {% for x in pg %} <a id="no-wrap" href="{{x}}.html">{{x}}</a> {% endfor %}
+        {% for x in pg %} <a href="{{x}}.html">{{x}}</a>{% endfor %} <a href="end.html">end</a> 
     <!-- [0] = title, [1] = href, [2] = date  [3] = favicons -->
         <ul class="flow-3" id="content">
         {% include 'content.html' %}
@@ -23,6 +23,7 @@
 
         {% endblock %}
         </ul>
+        {% for x in pg %} <a href="{{x}}.html">{{x}}</a>{% endfor %} <a href="end.html">end</a> 
     </main>
 </body>
 </html>
