--- a/templates/content.html
+++ b/templates/content.html
@@ -1,8 +1,12 @@
 {% block content %}
 
 {% for i in data %}
-<li><a href={{i[1]}}>{{i[0]}}</a> - <date>{{i[2]}}</date></li>
-<img src="{{i[3]}}" width="12" height="12"> <span style="font-size: 20px;">{{i[4]}}</span>
+<li>
+    <a href={{i[1]}}>{{i[0]}}</a> - <date>{{i[2]}}</date>
+    <img src="{{i[3]}}" width="12" height="12">
+    <span style="font-size: 20px;">{{i[4]}}</span>
+</li>
+<
 {% endfor %}
 
 {% endblock %}
