--- a/templates/content.html
+++ b/templates/content.html
@@ -2,11 +2,15 @@
 
 {% for i in data %}
 <li>
-    <a href={{i[1]}}>{{i[0]}}</a> - <date>{{i[2]}}</date>
-    <img src="{{i[3]}}" width="12" height="12">
-    <span style="font-size: 20px;">{{i[4]}}</span>
+    <img src={{i[3]}} width="20" height="20" aria-hidden="true">
+    <a href={{i[1]}}>{{i[0]}}</a>
+    <span aria-hidden="true">-</span>
+    <date>{{i[2]}}</date>
+    <span aria-hidden="true">-</span>
+    <small>
+        <a href={{i[4]}} aria-label="Visit website source">{{i[4]}}</a>
+    </small>
 </li>
-<
 {% endfor %}
 
 {% endblock %}
