--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <title>Auger</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="flow-5">
+<body>
     <header class="flow-5">
         <svg width="120" xmlns="http://www.w3.org/2000/svg" baseProfile="full" aria-hidden="true" viewBox="0 0 220 220" :=""><path d="M140 20a60 60 0 00-60 60h60zM80 200a60 60 0 0060-60H80zM50 80a30 30 0 0130 30 30 30 0 01-30 30 30 30 0 01-30-30 30 30 0 0130-30zm60 0a30 30 0 0130 30 30 30 0 01-30 30 30 30 0 01-30-30 30 30 0 0130-30zm60 0a30 30 0 0130 30 30 30 0 01-30 30 30 30 0 01-30-30 30 30 0 0130-30"></path><path d="M80 20a60 60 0 0160 60H80zm60 180a60 60 0 01-60-60h60zM20 20a60 60 0 0160 60H20zm0 180a60 60 0 0060-60H20zM200 20a60 60 0 00-60 60h60zm0 180a60 60 0 01-60-60h60z"></path></svg>
         <h1> Auger </h1>
